[package]
name = "fishnet-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
litrs = "0.4"
nanoid = "0.4"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"

[lib]
name = "fishnet_macros"
proc-macro = true
