[package]
name = "fishnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
esbuild-rs = { version = "0.13", optional = true }
futures = "0.3"
maud = { version = "0.26", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
tower-service = "0.3"
tracing = "0.1"
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "compression-br", "compression-deflate", "compression-zstd"] }
fishnet-macros = { path = "../fishnet-macros", version = "0.1"}
async-trait = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"
unindent = "0.2"
trybuild = "1"

[features]
default = []
minify-js = ["dep:esbuild-rs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
